--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "serialize-javascript": "^2.1.2"
   },
   "scripts": {
     "start": "PORT=3005 react-scripts start",
